Fixed the horizontal scrolling that was added.

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -4,7 +4,6 @@ body {
 
 .header {
   background-color: #01415a;
-  width: 100%;
   padding: 20px;
   height: 100px;
 }
